# sota-lens

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: arxiv-build.yml  joss-paper.yml  pages.yml  python-tests.yml
arxiv/: Makefile  README.md  main.tex  references.bib
data/case-study/: README.md  analysis_output.txt  articles_full.csv  failed.csv  failed_references.csv  graph.gexf  references.bib  scholar_seed_results.csv  subject_terms.txt
docs/: README.md  case_study_data.md  methodology.md  publication_status.md  usage.md
paper/: README.md  paper.bib  paper.md
src/sota_lens/: __init__.py  cli.py  pipeline.py
tests/: test_pipeline.py
website/: index.html  methodology.html  publication.html  tool.html
website/assets/: style.css  theme.js  tool.js
website/assets/data/: case-study-demo.json
